--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -18,6 +20,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
     "react-native-maps": "1.3.2",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
