--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/nosifer": "^0.2.3",
     "@expo-google-fonts/nunito": "^0.2.3",
+    "@expo-google-fonts/rubik-moonrocks": "^0.2.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
@@ -19,7 +21,7 @@
     "expo-status-bar": "~1.4.4",
     "firebase": "^10.0.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
