--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^10.0.0",
     "react": "18.2.0",
