--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
     "firebase": "^10.0.0",
     "react": "18.2.0",
     "react-native": "0.71.14",
+    "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
